fix cover text display on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,18 +91,19 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
 
-    width: 300px;
-    height: 150px;
+    width: auto;
+    height: auto;
 
     padding-top: 35px;
+    padding-bottom: 35px;
     padding-left: 10px;
     padding-right: 10px;
 
     background-color: orangered;
     opacity: 0.7;
 
-    bottom: 75px;
-    right: 150px;
+    bottom: 5vw;
+    right: 5vw;
 
     position: absolute;
 }
@@ -358,7 +359,8 @@ footer {
     }
 
     #cover-text {
-        left: 0px;
+        font-size: 110%;
+        width: auto;
     }
 
     #benefits {
@@ -379,5 +381,18 @@ footer {
     #benefits-right>.benefits-heading h2,
     #benefits-right>.benefits-heading p {
         text-align: center;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    #cover-text {
+        bottom: 0px;
+        padding: 10px;
+        
+        font-size: 70%;
+        opacity: 0.8;
+
     }
 }
